styled the more button and shoeItem

--- a/index.css
+++ b/index.css
@@ -11,22 +11,43 @@ body{
 
 .shoeItem{
     border: 1px solid black;
-    margin: 5px;
+    margin: 10px;
     padding: 5px;
 }
 
+.shoeItem h1, .shoeInfo{
+    margin: 0px 10px
+}
+
 .loader {
-    border: 8px solid #f3f3f3; /* Light grey */
-    border-top: 8px solid #3498db; /* Blue */
+    border: 8px solid #f3f3f3; 
+    border-top: 8px solid #ffcc00; 
     border-radius: 50%;
     width: 40px;
     height: 40px;
     animation: spin 2s linear infinite;
-    display: none; /* Initially hidden */
-    margin: auto; /* Center it */
+    display: none; 
+    margin: auto; 
 }
 
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
+}
+
+.shoeInfo{
+    display: flex;
+    justify-content: space-between;
+}
+
+.moreBtn {
+    display: block;             
+    margin: 20px auto;             
+    padding: 5px 20px;
+    border-radius: 5px;
+    background-color: #ffcc00;
+    border-color: #ffcc00;
+    font-size: 16px;
+    font-weight: 600;
+    font-family:'Times New Roman', Times, serif
 }
